# pmml-ui

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
kubernetes/: deployment.yml  ingress.yml  rbac.yml  service.yml  users.json
pmml_ui/: app.py  config.py
pmml_ui/auth/: add_user.py  db.py  forms.py  models.py  views.py
pmml_ui/mailing_lists/: exceptions.py  forms.py  models.py  views.py
pmml_ui/templates/: base.html
pmml_ui/templates/auth/: login.html
pmml_ui/templates/mailing_lists/: add_member.html  detail.html  list.html
pmml_ui/updater/: client.py  exceptions.py  k8s.py  models.py
