[tool.poetry]
name = "pmml-ui"
version = "0.1.0"
description = "Web ui for pmml"
authors = ["Michael Wilson <mw@1wilson.org>"]
readme = "README.md"
packages = [{include = "pmml_ui"}]

[tool.poetry.dependencies]
python = ">=3.9"
kubernetes = "^26.1.0"
Flask = "^2.2.3"
flask-wtf = "^1.1.1"
wtforms = {extras = ["email"], version = "^3.0.1"}
werkzeug = "^2.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
